# pycompatibility

./: Makefile  README.md  build.sh  example_code.py  main.py  pyproject.toml  script1.py  script2.py
.github/ISSUE_TEMPLATE/: bug_report.md
pycompatibility/: __init__.py  __main__.py  cli.py  version.py
tests/: __init__.py  test_checker.py
tests/__pycache__/: test_script.py
